<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailFragment"

    >

    <ImageView
        android:id="@+id/imageView_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
         />


    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView_banner">

        <RelativeLayout
            android:id="@+id/relayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">


            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/strong"
                android:textSize="@dimen/title1" />


            <ImageView
                android:id="@+id/image_bed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/text_price"
                android:layout_alignBottom="@+id/text_price"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="1dp"
                android:layout_toEndOf="@+id/text_price"
                android:src="@drawable/ic_bed" />

            <TextView
                android:id="@+id/text_bed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/text_price"
                android:layout_alignBottom="@+id/text_price"
                android:layout_marginStart="3dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/image_bed"
                android:fontFamily="@font/book"
                android:gravity="bottom"
                android:textColor="@color/medium"
                android:textSize="@dimen/subtitle" />

            <ImageView
                android:id="@+id/image_bath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_alignTop="@+id/text_price"
                android:layout_alignBottom="@+id/text_price"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/text_bed"
                android:src="@drawable/ic_bath" />

            <TextView
                android:id="@+id/text_bath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/text_price"
                android:layout_alignBottom="@+id/text_price"
                android:layout_marginStart="3dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/image_bath"
                android:fontFamily="@font/book"
                android:gravity="bottom"
                android:textColor="@color/medium"
                android:textSize="@dimen/subtitle" />

            <ImageView
                android:id="@+id/image_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/text_price"
                android:layout_alignBottom="@+id/text_price"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/text_bath"
                android:src="@drawable/ic_layers" />

            <TextView
                android:id="@+id/text_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/text_price"
                android:layout_alignBottom="@+id/text_price"
                android:layout_marginStart="3dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/image_layer"
                android:fontFamily="@font/book"
                android:gravity="bottom"
                android:textColor="@color/medium"
                android:textSize="@dimen/subtitle" />

            <ImageView
                android:id="@+id/image_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/text_price"
                android:layout_alignBottom="@+id/text_price"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/text_layer"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/text_price"
                android:layout_alignBottom="@+id/text_price"
                android:layout_marginStart="3dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/image_location"
                android:fontFamily="@font/book"
                android:gravity="bottom"
                android:textColor="@color/medium"
                android:textSize="@dimen/subtitle" />


            <TextView
                android:id="@+id/textView_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_price"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/strong"
                android:textSize="@dimen/title1"
                android:text="@string/description" />

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_desc"
                android:layout_alignParentStart="true"
                android:layout_marginStart="13dp"
                android:layout_marginTop="7dp"
                android:inputType="textMultiLine"
                android:maxLines="10"
                tools:ignore="TextViewEdits"
                android:fontFamily="@font/book"
                android:textColor="@color/medium"
                android:textSize="@dimen/body"/>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                tools:context=".DetailFragment" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_description"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/strong"
                android:textSize="@dimen/title1"
                android:text="@string/location" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/text_price"
                android:layout_alignBottom="@+id/text_price"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="-1dp"
                android:layout_toEndOf="@+id/text_location"
                android:text="@string/km"
                android:fontFamily="@font/book"
                android:gravity="bottom"
                android:textColor="@color/medium"
                android:textSize="@dimen/subtitle"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_back" />


</RelativeLayout>